# valkyrie-lsp

./: Cargo.toml
projects/valkyrie-lsp/: Cargo.toml  package.json
projects/valkyrie-lsp/src/: lib.rs  main.rs
