[package]
name = "valkyrie-lsp"
publish = false
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
categories = ["rust-patterns"]
homepage = "https://github.com/oovm/RustTemplate"
repository = "https://github.com/oovm/RustTemplate"
documentation = "https://docs.rs/valkyrie-lsp"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
tower-lsp = { version = "0.20.0", features = ["proposed"] }
tokio = { version = "1.37.0", features = ["full"] }

[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
all-features = true
